@@ -33,7 +33,7 @@ Max memory: 860 KB
 ## ~~Alphabet coverage~~
 |Alphabet|ruri used|%|
 |---|---|---|
-|52|38|73%|
+|52|39|75%|
 # Highlights:
 - Powerful Features
   - Basic container features are all supported, chroot, unshare with pivot_root, capability control, basic cgroup support, no_new_privs, auto set environment variables and change user/workdir, built-in seccomp profile, run rootless container, and even more...      
