@@ -71,6 +71,8 @@ void ruri_init_config(struct RURI_CONTAINER *_Nonnull container)
 	container->use_kvm = false;
 	container->char_devs[0] = NULL;
 	container->hidepid = INIT_VALUE;
+	container->timens_realtime_offset = 0;
+	container->timens_monotonic_offset = 0;
 	// Use the time now for container_id.
 	time_t tm = time(NULL);
 	// We need a int value for container_id, so use long%86400.
@@ -304,6 +306,12 @@ char *ruri_container_info_to_k2v(const struct RURI_CONTAINER *_Nonnull container
 	ret = k2v_add_comment(ret, "Set it to empty to disable it.");
 	ret = k2v_add_config(char, ret, "hostname", container->hostname);
 	ret = k2v_add_newline(ret);
+	// Time offset.
+	ret = k2v_add_comment(ret, "Time offset for timens.");
+	ret = k2v_add_comment(ret, "Default is 0.");
+	ret = k2v_add_config(llong, ret, "timens_realtime_offset", container->timens_realtime_offset);
+	ret = k2v_add_config(llong, ret, "timens_monotonic_offset", container->timens_monotonic_offset);
+	ret = k2v_add_newline(ret);
 	return ret;
 }
 void ruri_read_config(struct RURI_CONTAINER *_Nonnull container, const char *_Nonnull path)
@@ -322,7 +330,7 @@ void ruri_read_config(struct RURI_CONTAINER *_Nonnull container, const char *_No
 	close(fd);
 	char *buf = k2v_open_file(path, (size_t)size);
 	// Check if config is valid.
-	char *key_list[] = { "hidepid", "char_devs", "use_kvm", "no_network", "container_dir", "user", "drop_caplist", "no_new_privs", "enable_seccomp", "rootless", "no_warnings", "cross_arch", "qemu_path", "use_rurienv", "cpuset", "memory", "cpupercent", "just_chroot", "unmask_dirs", "mount_host_runtime", "work_dir", "rootfs_source", "ro_root", "extra_mountpoint", "extra_ro_mountpoint", "env", "command", "hostname", NULL };
+	char *key_list[] = { "timens_realtime_offset", "timens_monotonic_offset", "hidepid", "char_devs", "use_kvm", "no_network", "container_dir", "user", "drop_caplist", "no_new_privs", "enable_seccomp", "rootless", "no_warnings", "cross_arch", "qemu_path", "use_rurienv", "cpuset", "memory", "cpupercent", "just_chroot", "unmask_dirs", "mount_host_runtime", "work_dir", "rootfs_source", "ro_root", "extra_mountpoint", "extra_ro_mountpoint", "env", "command", "hostname", NULL };
 	for (int i = 0; key_list[i] != NULL; i++) {
 		if (!have_key(key_list[i], buf)) {
 			ruri_error("{red}Invalid config file, there is no key:%s\nHint:\n You can try to use `ruri -C config` to fix the config file{clear}", key_list[i]);
@@ -419,6 +427,9 @@ void ruri_read_config(struct RURI_CONTAINER *_Nonnull container, const char *_No
 	if (charlen % 3 != 0) {
 		ruri_error("{red}Invalid char_devs format\n{clear}");
 	}
+	// Get time offset.
+	container->timens_realtime_offset = k2v_get_key(llong, "timens_realtime_offset", buf);
+	container->timens_monotonic_offset = k2v_get_key(llong, "timens_monotonic_offset", buf);
 	free(buf);
 	buf = ruri_container_info_to_k2v(container);
 	ruri_log("{base}Container config in %s:{cyan}\n%s", path, buf);
@@ -652,6 +663,18 @@ void ruri_correct_config(const char *_Nonnull path)
 		container.use_kvm = false;
 	} else {
 		container.use_kvm = k2v_get_key(bool, "use_kvm", buf);
+	}
+	if (!have_key("timens_realtime_offset", buf)) {
+		ruri_warning("{green}No key timens_realtime_offset found, set to 0\n{clear}");
+		container.timens_realtime_offset = 0;
+	} else {
+		container.timens_realtime_offset = k2v_get_key(llong, "timens_realtime_offset", buf);
+	}
+	if (!have_key("timens_monotonic_offset", buf)) {
+		ruri_warning("{green}No key timens_monotonic_offset found, set to 0\n{clear}");
+		container.timens_monotonic_offset = 0;
+	} else {
+		container.timens_monotonic_offset = k2v_get_key(llong, "timens_monotonic_offset", buf);
 	}
 	free(buf);
 	unlink(path);
